log
Thu 16 May 2024 09:10:12 PM UTC: 
 sudoku.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  0|5
total_score: 0/70
068896a
Thu 16 May 2024 09:17:24 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
2eacb95
Thu 16 May 2024 09:18:56 PM UTC: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:60:14: error: ‘k’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   60 |             k++;
      |             ~^~
cc1: all warnings being treated as errors
Compilation failed
f45caac
Thu 16 May 2024 09:19:04 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
911eec4
Thu 16 May 2024 09:19:13 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
a7dce4e
Thu 16 May 2024 09:23:30 PM UTC: 
 sudoku.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
cffda1c
